Fix the text overflow problem for the select component in Chrome browser

--- a/src/form.less
+++ b/src/form.less
@@ -89,6 +89,8 @@
 }
 // 下拉菜单
 select.form-control{
+  padding-top: 0;
+  padding-bottom: 0;
   height: @control-height;
   background-color: #fff;
   .border-radius(0);
